--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,14 +1,14 @@
-name: Greetings
-
-on: [pull_request, issues, create, commit_comment]
-
+name: "GreetContributor"
+on:
+  push:
+  pull_request:
+    types: [opened,synchronize]
+    
 jobs:
-  greeting:
+  GreetCommitter: 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Message that will be displayed on users'' first issue'
-        pr-message: 'Message that will be displayed on users'' first pr'
-        create: 'Hey! {{ @github.actor }} thanks for your contribution'
+    - name: "Greet contributor"
+      uses: ibakshay/greet-contributors-action@v3
+      env: 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
